--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "start:node": "yarn workspace hardhat run start:node",
+    "contract:deploy": "yarn workspace hardhat run deploy",
+    "start:server": "yarn workspace server run start",
+    "start:web": "yarn workspace web-app run start"
+  }
 }
