--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -10,5 +10,9 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8"
+  },
+  "scripts": {
+    "start:node": "hardhat node",
+    "deploy": "hardhat run --network localhost scripts/deploy.js"
   }
 }
